--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -1,37 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** Introductory Examples for the NLTK Book ***\n",
-      "Loading text1, ..., text9 and sent1, ..., sent9\n",
-      "Type the name of the text or sentence to view it.\n",
-      "Type: 'texts()' or 'sents()' to list the materials.\n",
-      "text1: Moby Dick by Herman Melville 1851\n",
-      "text2: Sense and Sensibility by Jane Austen 1811\n",
-      "text3: The Book of Genesis\n",
-      "text4: Inaugural Address Corpus\n",
-      "text5: Chat Corpus\n",
-      "text6: Monty Python and the Holy Grail\n",
-      "text7: Wall Street Journal\n",
-      "text8: Personals Corpus\n",
-      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
-     ]
-    }
-   ],
+   "source": [
+    "# HDT4 PREDICCIÓN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.book import FreqDist\n",
     "from nltk.util import ngrams\n",
-    "from wordcloud import WordCloud\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -64,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,17 +59,180 @@
        "5584472"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tweets = []\n",
-    "with open('./en_US.twitter.txt') as f:\n",
+    "with open('./clean_data/en_US.twitter.txt', encoding=\"utf-8\") as f:\n",
     "    tweets = f.read()\n",
     "len(tweets)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### N Gramas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_1_gram = list(ngrams(tweets, 1))\n",
+    "tweets_2_gram = list(ngrams(tweets, 2))\n",
+    "tweets_3_gram = list(ngrams(tweets, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('a',),\n",
+       " ('w',),\n",
+       " ('w',),\n",
+       " (' ',),\n",
+       " ('n',),\n",
+       " ('o',),\n",
+       " ('o',),\n",
+       " (' ',),\n",
+       " ('h',),\n",
+       " ('e',)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_1_gram[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk import word_tokenize, sent_tokenize\n",
+    "tokenized_text = [list(map(str.lower, word_tokenize(sent))) for sent in sent_tokenize(tweets)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
+    "train, vocab = padded_everygram_pipeline(3, tokenized_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.lm import MLE\n",
+    "mle = MLE(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 68850 items>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mle.fit(train, vocab)\n",
+    "print(mle.vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mle.score('you', 'how are'.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['actually', 'wrote', 'article']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mle.generate(3, 'how are'.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -102,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
