--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -9,9 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Introductory Examples for the NLTK Book ***\n",
+      "Loading text1, ..., text9 and sent1, ..., sent9\n",
+      "Type the name of the text or sentence to view it.\n",
+      "Type: 'texts()' or 'sents()' to list the materials.\n",
+      "text1: Moby Dick by Herman Melville 1851\n",
+      "text2: Sense and Sensibility by Jane Austen 1811\n",
+      "text3: The Book of Genesis\n",
+      "text4: Inaugural Address Corpus\n",
+      "text5: Chat Corpus\n",
+      "text6: Monty Python and the Holy Grail\n",
+      "text7: Wall Street Journal\n",
+      "text8: Personals Corpus\n",
+      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
@@ -50,24 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5584472"
+       "873665"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tweets = []\n",
-    "with open('./clean_data/en_US.twitter.txt', encoding=\"utf-8\") as f:\n",
+    "with open('./clean_data/en_US.twitter.txt') as f:\n",
     "    tweets = f.read()\n",
+    "    tweets = tweets.split()\n",
     "len(tweets)"
    ]
   },
@@ -80,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,25 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('a',),\n",
-       " ('w',),\n",
-       " ('w',),\n",
-       " (' ',),\n",
-       " ('n',),\n",
-       " ('o',),\n",
-       " ('o',),\n",
-       " (' ',),\n",
-       " ('h',),\n",
-       " ('e',)]"
+       "[('aww',),\n",
+       " ('noo',),\n",
+       " ('hey',),\n",
+       " ('lets',),\n",
+       " ('conversation',),\n",
+       " ('twitter',),\n",
+       " ('amazing',),\n",
+       " ('thank',),\n",
+       " ('miss',),\n",
+       " ('appreciate',)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
