arreglar error en lectura de archivo de datos limpios de R.

--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -9,29 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** Introductory Examples for the NLTK Book ***\n",
-      "Loading text1, ..., text9 and sent1, ..., sent9\n",
-      "Type the name of the text or sentence to view it.\n",
-      "Type: 'texts()' or 'sents()' to list the materials.\n",
-      "text1: Moby Dick by Herman Melville 1851\n",
-      "text2: Sense and Sensibility by Jane Austen 1811\n",
-      "text3: The Book of Genesis\n",
-      "text4: Inaugural Address Corpus\n",
-      "text5: Chat Corpus\n",
-      "text6: Monty Python and the Holy Grail\n",
-      "text7: Wall Street Journal\n",
-      "text8: Personals Corpus\n",
-      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
@@ -70,26 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "873665"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tweets = []\n",
-    "with open('./clean_data/en_US.twitter.txt') as f:\n",
+    "with open('./clean_data/en_US.twitter.txt', 'r') as f:\n",
     "    tweets = f.read()\n",
-    "    tweets = tweets.split()\n",
-    "len(tweets)"
+    "\n",
+    "with open('./clean_data/twitter.txt', 'w') as f:\n",
+    "    f.write(tweets)\n",
+    "    \n",
+    "with open('./clean_data/twitter.txt', 'r') as f:\n",
+    "    tweets = f.read()"
    ]
   },
   {
@@ -112,36 +85,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tweets_1_gram' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-bde918a6b98b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtweets_1_gram\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tweets_1_gram' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tweets_1_gram[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('aww',),\n",
-       " ('noo',),\n",
-       " ('hey',),\n",
-       " ('lets',),\n",
-       " ('conversation',),\n",
-       " ('twitter',),\n",
-       " ('amazing',),\n",
-       " ('thank',),\n",
-       " ('miss',),\n",
-       " ('appreciate',)]"
+       "16445640"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tweets_1_gram[:10]"
+    "PERCENT_TO_TRAIN = 0.10\n",
+    "tweets_data = tweets[:round(len(tweets) * PERCENT_TO_TRAIN)]\n",
+    "len(tweets_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 68850 items>\n"
+      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 110385 items>\n"
      ]
     }
    ],
@@ -189,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.754950495049505"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['actually', 'wrote', 'article']"
+       "['you', 'interested', 'in']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
