generacion de ngramas.

--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -9,16 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Introductory Examples for the NLTK Book ***\n",
+      "Loading text1, ..., text9 and sent1, ..., sent9\n",
+      "Type the name of the text or sentence to view it.\n",
+      "Type: 'texts()' or 'sents()' to list the materials.\n",
+      "text1: Moby Dick by Herman Melville 1851\n",
+      "text2: Sense and Sensibility by Jane Austen 1811\n",
+      "text3: The Book of Genesis\n",
+      "text4: Inaugural Address Corpus\n",
+      "text5: Chat Corpus\n",
+      "text6: Monty Python and the Holy Grail\n",
+      "text7: Wall Street Journal\n",
+      "text8: Personals Corpus\n",
+      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.book import FreqDist\n",
     "from nltk.util import ngrams\n",
-    "import matplotlib.pyplot as plt"
+    "from nltk import word_tokenize, sent_tokenize\n",
+    "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
+    "from nltk.lm import MLE\n",
+    "import matplotlib.pyplot as plt\n",
+    "from itertools import chain"
    ]
   },
   {
@@ -50,19 +74,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "tweets = []\n",
-    "with open('./clean_data/en_US.twitter.txt', 'r') as f:\n",
+    "tweets_splitted = []\n",
+    "with open('./CleanData/en_US.twitter.txt', 'r') as f:\n",
     "    tweets = f.read()\n",
     "\n",
-    "with open('./clean_data/twitter.txt', 'w') as f:\n",
+    "with open('./CleanData/twitter.txt', 'w') as f:\n",
     "    f.write(tweets)\n",
     "    \n",
-    "with open('./clean_data/twitter.txt', 'r') as f:\n",
+    "with open('./CleanData/twitter.txt', 'r') as f:\n",
     "    tweets = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "5625699\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(tweets))\n",
+    "print(len(tweets))"
    ]
   },
   {
@@ -74,98 +118,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_1_gram = list(ngrams(tweets, 1))\n",
-    "tweets_2_gram = list(ngrams(tweets, 2))\n",
-    "tweets_3_gram = list(ngrams(tweets, 3))"
+    "words = word_tokenize(tweets)\n",
+    "tweets_1_gram = list(ngrams(words, 1))\n",
+    "tweets_2_gram = list(ngrams(words, 2))\n",
+    "tweets_3_gram = list(ngrams(words, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tweets_1_gram' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-bde918a6b98b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtweets_1_gram\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'tweets_1_gram' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "tweets_1_gram[:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16445640"
+       "[('punk',), ('unfollowed',), ('kanye',), ('dont',), ('blog',)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PERCENT_TO_TRAIN = 0.10\n",
-    "tweets_data = tweets[:round(len(tweets) * PERCENT_TO_TRAIN)]\n",
-    "len(tweets_data)"
+    "tweets_1_gram[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('punk', 'unfollowed'),\n",
+       " ('unfollowed', 'kanye'),\n",
+       " ('kanye', 'dont'),\n",
+       " ('dont', 'blog'),\n",
+       " ('blog', 'timeline')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_2_gram[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('punk', 'unfollowed', 'kanye'),\n",
+       " ('unfollowed', 'kanye', 'dont'),\n",
+       " ('kanye', 'dont', 'blog'),\n",
+       " ('dont', 'blog', 'timeline'),\n",
+       " ('blog', 'timeline', 'nba')]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_3_gram[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk import word_tokenize, sent_tokenize\n",
     "tokenized_text = [list(map(str.lower, word_tokenize(sent))) for sent in sent_tokenize(tweets)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
-    "train, vocab = padded_everygram_pipeline(3, tokenized_text)"
+    "train, vocab = padded_everygram_pipeline(4, tokenized_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.lm import MLE\n",
-    "mle = MLE(3)"
+    "mle = MLE(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 110385 items>\n"
+      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 69863 items>\n"
      ]
     }
    ],
@@ -176,42 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.754950495049505"
+       "['tucker', 'love', 'see']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mle.score('you', 'how are'.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['you', 'interested', 'in']"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mle.generate(3, 'how are'.split())"
+    "mle.generate(3, 'hi'.split())"
    ]
   },
   {
