juntar 3 archivos de texto para entrenar modelos.

--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -79,15 +79,38 @@
    "outputs": [],
    "source": [
     "tweets = []\n",
-    "tweets_splitted = []\n",
-    "with open('./CleanData/en_US.twitter.txt', 'r') as f:\n",
+    "blogs = []\n",
+    "news = []\n",
+    "\n",
+    "# tweets\n",
+    "with open('./CleanData/en_US.twitter.txt.txt', 'r') as f:\n",
     "    tweets = f.read()\n",
     "\n",
     "with open('./CleanData/twitter.txt', 'w') as f:\n",
     "    f.write(tweets)\n",
     "    \n",
     "with open('./CleanData/twitter.txt', 'r') as f:\n",
-    "    tweets = f.read()"
+    "    tweets = f.read()\n",
+    "    \n",
+    "# blogs\n",
+    "with open('./CleanData/en_US.blogs.txt.txt', 'r') as f:\n",
+    "    blogs = f.read()\n",
+    "\n",
+    "with open('./CleanData/blogs.txt', 'w') as f:\n",
+    "    f.write(blogs)\n",
+    "    \n",
+    "with open('./CleanData/blogs.txt', 'r') as f:\n",
+    "    blogs = f.read()\n",
+    "    \n",
+    "# news\n",
+    "with open('./CleanData/en_US.news.txt.txt', 'r') as f:\n",
+    "    news = f.read()\n",
+    "\n",
+    "with open('./CleanData/news.txt', 'w') as f:\n",
+    "    f.write(news)\n",
+    "    \n",
+    "with open('./CleanData/news.txt', 'r') as f:\n",
+    "    news = f.read()"
    ]
   },
   {
@@ -99,14 +122,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "5625699\n"
+      "7744557\n",
+      "10036716\n",
+      "742861\n"
      ]
     }
    ],
    "source": [
-    "print(type(tweets))\n",
-    "print(len(tweets))"
+    "print(len(tweets))\n",
+    "print(len(blogs))\n",
+    "print(len(news))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Juntar los 3 textos para entrenar los distintos modelos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18524134\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_texts = tweets + blogs + news\n",
+    "print(len(all_texts))"
    ]
   },
   {
@@ -118,11 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = word_tokenize(tweets)\n",
+    "words = word_tokenize(all_texts)\n",
     "tweets_1_gram = list(ngrams(words, 1))\n",
     "tweets_2_gram = list(ngrams(words, 2))\n",
     "tweets_3_gram = list(ngrams(words, 3))"
@@ -130,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('punk',), ('unfollowed',), ('kanye',), ('dont',), ('blog',)]"
+       "[('punk',), ('i',), ('unfollowed',), ('kanye',), ('because',)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,20 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('punk', 'unfollowed'),\n",
+       "[('punk', 'i'),\n",
+       " ('i', 'unfollowed'),\n",
        " ('unfollowed', 'kanye'),\n",
-       " ('kanye', 'dont'),\n",
-       " ('dont', 'blog'),\n",
-       " ('blog', 'timeline')]"
+       " ('kanye', 'because'),\n",
+       " ('because', 'of')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,20 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('punk', 'unfollowed', 'kanye'),\n",
-       " ('unfollowed', 'kanye', 'dont'),\n",
-       " ('kanye', 'dont', 'blog'),\n",
-       " ('dont', 'blog', 'timeline'),\n",
-       " ('blog', 'timeline', 'nba')]"
+       "[('punk', 'i', 'unfollowed'),\n",
+       " ('i', 'unfollowed', 'kanye'),\n",
+       " ('unfollowed', 'kanye', 'because'),\n",
+       " ('kanye', 'because', 'of'),\n",
+       " ('because', 'of', 'that')]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_text = [list(map(str.lower, word_tokenize(sent))) for sent in sent_tokenize(tweets)]"
+    "tokenized_text = [list(map(str.lower, word_tokenize(sent))) for sent in sent_tokenize(all_texts)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 69863 items>\n"
+      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 114388 items>\n"
      ]
     }
    ],
@@ -243,22 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['tucker', 'love', 'see']"
+       "['bdayno', 'party', 'can']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mle.generate(3, 'hi'.split())"
+    "mle.generate(3, 'i want my'.split())"
    ]
   },
   {
