funcion para saber probabilidad

--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -9,29 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** Introductory Examples for the NLTK Book ***\n",
-      "Loading text1, ..., text9 and sent1, ..., sent9\n",
-      "Type the name of the text or sentence to view it.\n",
-      "Type: 'texts()' or 'sents()' to list the materials.\n",
-      "text1: Moby Dick by Herman Melville 1851\n",
-      "text2: Sense and Sensibility by Jane Austen 1811\n",
-      "text3: The Book of Genesis\n",
-      "text4: Inaugural Address Corpus\n",
-      "text5: Chat Corpus\n",
-      "text6: Monty Python and the Holy Grail\n",
-      "text7: Wall Street Journal\n",
-      "text8: Personals Corpus\n",
-      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
@@ -74,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +169,7 @@
        "[('punk',), ('i',), ('unfollowed',), ('kanye',), ('because',)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +193,7 @@
        " ('because', 'of')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +217,7 @@
        " ('because', 'of', 'that')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -292,23 +272,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 136,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['bdayno', 'party', 'can']"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "mle.generate(3, 'i want my'.split())"
+    "## Funcion de posibles 3 palabras"
    ]
   },
   {
@@ -316,28 +283,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frase = input(\"Ingrese la frase: \")\n",
+    "predictor = mle.generate(3, frase.split())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 274,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to 0.1691919191919192\n",
+      "remind 0.0\n",
+      "tasia 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in predictor:\n",
+    "    print(x,mle.score(x, frase.split())) "
+   ]
   }
  ],
  "metadata": {
