--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -9,9 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Introductory Examples for the NLTK Book ***\n",
+      "Loading text1, ..., text9 and sent1, ..., sent9\n",
+      "Type the name of the text or sentence to view it.\n",
+      "Type: 'texts()' or 'sents()' to list the materials.\n",
+      "text1: Moby Dick by Herman Melville 1851\n",
+      "text2: Sense and Sensibility by Jane Austen 1811\n",
+      "text3: The Book of Genesis\n",
+      "text4: Inaugural Address Corpus\n",
+      "text5: Chat Corpus\n",
+      "text6: Monty Python and the Holy Grail\n",
+      "text7: Wall Street Journal\n",
+      "text8: Personals Corpus\n",
+      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
@@ -54,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +189,7 @@
        "[('punk',), ('i',), ('unfollowed',), ('kanye',), ('because',)]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +213,7 @@
        " ('because', 'of')]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +237,7 @@
        " ('because', 'of', 'that')]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,8 +247,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tokenizacion de texto"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,8 +263,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelos de predicción"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MLE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Entrenamiento"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +323,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Kneser-Ney"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.lm.models import KneserNeyInterpolated\n",
+    "kneser = KneserNeyInterpolated(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Vocabulary with cutoff=1 unk_label='<UNK>' and 114388 items>\n"
+     ]
+    }
+   ],
+   "source": [
+    "kn_train, kn_vocab = padded_everygram_pipeline(4, tokenized_text)\n",
+    "kneser.fit(kn_train, kn_vocab)\n",
+    "print(kneser.vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7907372155097071"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kneser.score('you', 'how are'.split())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Funcion de posibles 3 palabras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MLE"
    ]
   },
   {
@@ -307,6 +418,51 @@
     "for x in predictor:\n",
     "    print(x,mle.score(x, frase.split())) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kneser-Ney"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese la frase: how are\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Ingrese la frase: \")\n",
+    "predictor_kn = kneser.generate(3, frase.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you 0.7907372155097071\n",
+      "all 0.003954882569703254\n",
+      "i 1.6015330465869572e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in predictor_kn:\n",
+    "    print(x, kneser.score(x, frase.split())) "
+   ]
   }
  ],
  "metadata": {
@@ -325,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
