agregar modelo Laplace.

--- a/hdt4.ipynb
+++ b/hdt4.ipynb
@@ -9,29 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** Introductory Examples for the NLTK Book ***\n",
-      "Loading text1, ..., text9 and sent1, ..., sent9\n",
-      "Type the name of the text or sentence to view it.\n",
-      "Type: 'texts()' or 'sents()' to list the materials.\n",
-      "text1: Moby Dick by Herman Melville 1851\n",
-      "text2: Sense and Sensibility by Jane Austen 1811\n",
-      "text3: The Book of Genesis\n",
-      "text4: Inaugural Address Corpus\n",
-      "text5: Chat Corpus\n",
-      "text6: Monty Python and the Holy Grail\n",
-      "text7: Wall Street Journal\n",
-      "text8: Personals Corpus\n",
-      "text9: The Man Who Was Thursday by G . K . Chesterton 1908\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk import lm\n",
@@ -41,6 +21,7 @@
     "from nltk import word_tokenize, sent_tokenize\n",
     "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
     "from nltk.lm import MLE\n",
+    "from nltk.lm.models import Laplace\n",
     "import matplotlib.pyplot as plt\n",
     "from itertools import chain"
    ]
@@ -294,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +360,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Laplace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0016227251313011464"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lp_train, lp_vocab = padded_everygram_pipeline(4, tokenized_text)\n",
+    "laplace = Laplace(4)\n",
+    "laplace.fit(lp_train, lp_vocab)\n",
+    "laplace.score('you', 'how are'.split())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Funcion de posibles 3 palabras"
    ]
   },
@@ -391,9 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese la frase: i am\n"
+     ]
+    }
+   ],
    "source": [
     "frase = input(\"Ingrese la frase: \")\n",
     "predictor = mle.generate(3, frase.split())"
@@ -401,16 +420,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to 0.1691919191919192\n",
-      "remind 0.0\n",
-      "tasia 0.0\n"
+      "so 0.05670391061452514\n",
+      "sweaty 0.0\n",
+      "from 0.0025139664804469273\n"
      ]
     }
    ],
@@ -428,14 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingrese la frase: how are\n"
+      "Ingrese la frase: i am\n"
      ]
     }
    ],
@@ -446,22 +465,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "you 0.7907372155097071\n",
-      "all 0.003954882569703254\n",
-      "i 1.6015330465869572e-05\n"
+      "not 0.06994577545527271\n",
+      "promising 4.693140763017691e-09\n",
+      "weekly 4.693140763017691e-09\n"
      ]
     }
    ],
    "source": [
     "for x in predictor_kn:\n",
     "    print(x, kneser.score(x, frase.split())) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese la frase: i really want\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Ingrese la frase: \")\n",
+    "predictor_lp = laplace.generate(3, frase.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to 0.00033201981634061736\n",
+      "avoid 8.737363587910984e-06\n",
+      "it 3.4949454351643935e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in predictor_lp:\n",
+    "    print(x, laplace.score(x, frase.split()))"
    ]
   }
  ],
@@ -481,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
